# audioTranscriber

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/audiotranscriber/: main.py
