[tool.poetry]
name = "audiotranscriber"
version = "0.1.0"
description = ""
authors = ["alby11 <alby11@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.57.4"
pydub = "^0.25.1"
audioop-lts = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
audiotranscriber = "audiotranscriber.main:main_function"
